--- a/css/style1.css
+++ b/css/style1.css
@@ -10,7 +10,7 @@
     color: black;
   }
   .transbox {
-    background-color: #ffffff;
+    background-color: #ffffffee;
     opacity: 0.8;
     font-weight: bold;
     color: #000000;
