--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
     <nav class="navbar fixed-bottom navbar-dark navbar-expand-lg transbox">
         <div class="container">
-            <span class="text-muted ft ">Adresse : Zone touristique El Morgene، 1 Tabarka Touristic Road, Tabarka 8110  </span>
-            <span class="text-muted ft ">Téléphone : 70 019 000</span>
+            <span class="text-muted ft "><i class="fa fa-map-marker"></i>  Hôtel La Cigale Tabarka Zone touristique El Morjene , 8110 Tabarka, Tunisie</span>
+            <span class="text-muted ft "><i class="fa fa-phone"></i> Téléphone : 70 019 000</span>
         </div>
     </nav>
   </footer>
